[workspace]
members = [ "examples/enable_agc",
    "examples/hide_thread_from_debugger",
    "examples/prevent_third_party_loading"
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["HANHIVE"]
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
[workspace.dependencies]

msvc_spectre_libs = "0.1.3"

windows = { version = "0.61.3"}
tokio = { version = "1.45.1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
strip = "symbols"

[profile.dev]
panic = "abort"
overflow-checks = true
incremental = true
debug = 2

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
